SERVER-3176 autoIndexId:false honored in createCollection